# hailo-apps

./: README.md  changelog.md  install.sh  pyproject.toml  run_tests.sh
doc/developer_guide/: gstreamer_helper_pipelines.md
doc/user_guide/: configuration.md  installation.md
hailo_apps/config/: README.md
hailo_apps/cpp/classification/: README.md
hailo_apps/cpp/common/: toolbox.cpp  toolbox.hpp
hailo_apps/cpp/depth_estimation_mono/: README.md
hailo_apps/cpp/depth_estimation_stereo/: README.md
hailo_apps/cpp/instance_segmentation/: README.md
hailo_apps/cpp/object_detection/: README.md
hailo_apps/cpp/onnxrt_hailo_pipeline/: README.md
hailo_apps/cpp/pose_estimation/: README.md
hailo_apps/cpp/semantic_segmentation/: README.md
hailo_apps/installation/: download_resources.py  set_env.py
hailo_apps/python/core/common/: defines.py  installation_utils.py
hailo_apps/python/core/gstreamer/: gstreamer_app.py  gstreamer_common.py  gstreamer_helper_pipelines.py
hailo_apps/python/gen_ai_apps/hailo_ollama/: README.md
hailo_apps/python/pipeline_apps/face_recognition/: face_recognition.py  face_recognition_pipeline.py  face_recon_algo_params.json  face_regognition1.py
hailo_apps/python/standalone_apps/instance_segmentation/: README.md  instance_segmentation.py
hailo_apps/python/standalone_apps/lane_detection/: README.md
hailo_apps/python/standalone_apps/object_detection/: README.md  object_detection.py
hailo_apps/python/standalone_apps/oriented_object_detection/: README.md
hailo_apps/python/standalone_apps/paddle_ocr/: README.md
hailo_apps/python/standalone_apps/pose_estimation/: README.md
hailo_apps/python/standalone_apps/super_resolution/: README.md
hailo_apps/python/standalone_apps/yolo26/pose_estimation/: README.md
scripts/: check_installed_packages.sh
